[FIX] large images cropper

--- a/public/css/brand-home.css
+++ b/public/css/brand-home.css
@@ -2350,6 +2350,8 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
 .form-inline {
   display: -webkit-box;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
   flex-flow: row wrap;
   -webkit-box-align: center;
   align-items: center;
@@ -2374,6 +2376,8 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
     display: flex;
     -webkit-box-flex: 0;
     flex: 0 0 auto;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
     flex-flow: row wrap;
     -webkit-box-align: center;
     align-items: center;
@@ -4271,6 +4275,8 @@ tbody.collapse.show {
   .card-deck {
     display: -webkit-box;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
     flex-flow: row wrap;
   }
   .card-deck .card {
@@ -4294,6 +4300,8 @@ tbody.collapse.show {
   .card-group {
     display: -webkit-box;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
     flex-flow: row wrap;
   }
   .card-group .card {
@@ -4746,6 +4754,8 @@ a.badge:focus, a.badge:hover {
   position: relative;
   display: -webkit-box;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
   flex-flow: row wrap;
   -webkit-box-align: center;
   align-items: center;
@@ -8712,11 +8722,72 @@ button, input, optgroup, select, textarea {
   -webkit-box-direction: normal;
   flex-direction: row;
   justify-content: space-around;
-  margin-top: 10px;
+  -webkit-box-align: center;
+  align-items: center;
+  margin-top: -75px;
+  margin-bottom: 100px;
 }
 
 .feature-flex-menu h5 {
   color: #000;
+}
+
+.logo-brand {
+  width: 200px;
+  height: auto;
+  position: relative;
+}
+
+.logo-brand:hover #logo-uploaded {
+  opacity: 0.3;
+}
+
+.logo-brand:hover #overlay {
+  opacity: 1;
+}
+
+.logo-brand #logo-uploaded {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  border-radius: 50%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.logo-brand #overlay {
+  opacity: 0;
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  -webkit-transform: translate(0%, -100%);
+  transform: translate(0%, -100%);
+  -ms-transform: translate(0%, -100%);
+}
+
+.jcrop-circle-demo .jcrop-box {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  border: 1px solid white;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.jcrop-circle-demo .jcrop-box:focus {
+  outline: none;
+}
+
+.custom-shade {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background-color: black;
+  opacity: 0.4;
+  width: 100%;
+  height: 100%;
 }
 
 .feature-promotions {
